2019 - Primer Cuatrimestre/y.output
Terminals unused in grammar

   UNTIL
   THEN
   ENDIF
   CAR_PYC


Estado 41 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 80 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 81 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 programa: declaracion sentencias

    2 declaracion: VAR linea_declaracion ENDVAR

    3 linea_declaracion: CAR_CA lista CAR_CC

    4 lista: dec_tipo CAR_COMA lista CAR_COMA ID
    5      | dec_tipo CAR_CC OP_DOSP CAR_CA ID

    6 dec_tipo: INT
    7         | STRING
    8         | FLOAT

    9 sentencias: sentencias sent
   10           | sent

   11 sent: iteracion
   12     | decision
   13     | entrada_salida
   14     | asignacion
   15     | sent_div
   16     | sent_mod
   17     | cte_nombre

   18 iteracion: REPEAT CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC

   19 condiciones: condiciones operador condicion
   20            | condicion

   21 operador: AND
   22         | OR

   23 condicion: expresion CMP_MAYOR expresion
   24          | expresion CMP_MAYORIGUAL expresion
   25          | expresion CMP_MENOR expresion
   26          | expresion CMP_MENORIGUAL expresion
   27          | expresion CMP_IGUAL expresion
   28          | expresion CMP_DISTINTO expresion

   29 expresion: expresion OP_RES termino
   30          | expresion OP_SUM termino
   31          | termino

   32 termino: termino OP_MUL factor
   33        | termino OP_DIV factor
   34        | factor

   35 factor: ID
   36       | tipo
   37       | CAR_PA expresion CAR_PC

   38 tipo: CONST_INT
   39     | CONST_REAL

   40 decision: IF CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC
   41         | IF CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC ELSE CAR_LA sentencias CAR_LC

   42 entrada_salida: READ ID
   43               | PRINT ID
   44               | PRINT CONST_STR

   45 asignacion: lista expresion

   46 sent_div: ID OP_ASIG expresion DIV expresion

   47 sent_mod: ID OP_ASIG expresion MOD expresion

   48 DIV: OP_DIV

   49 MOD: OP_MOD

   50 cte_nombre: CONST ID OP_IGUAL CONST_STR
   51           | CONST ID OP_IGUAL CONST_REAL
   52           | CONST ID OP_IGUAL CONST_INT


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
VAR (258) 2
ENDVAR (259) 2
REPEAT (260) 18
UNTIL (261)
IF (262) 40 41
THEN (263)
ELSE (264) 41
ENDIF (265)
OP_ASIG (266) 46 47
OP_SUM (267) 30
OP_RES (268) 29
OP_DIV (269) 33 48
OP_MUL (270) 32
OP_DOSP (271) 5
CAR_COMA (272) 4
CAR_PYC (273)
CAR_PA (274) 18 37 40 41
CAR_PC (275) 18 37 40 41
CAR_CA (276) 3 5
CAR_CC (277) 3 5
CAR_LA (278) 18 40 41
CAR_LC (279) 18 40 41
CMP_MAYOR (280) 23
CMP_MENOR (281) 25
CMP_MAYORIGUAL (282) 24
CMP_MENORIGUAL (283) 26
CMP_DISTINTO (284) 28
CMP_IGUAL (285) 27
ID (286) 4 5 35 42 43 46 47 50 51 52
INT (287) 6
FLOAT (288) 8
STRING (289) 7
AND (290) 21
OR (291) 22
READ (292) 42
PRINT (293) 43 44
OP_MOD (294) 49
OP_IGUAL (295) 50 51 52
CONST (296) 50 51 52
CONST_INT (297) 38 52
CONST_REAL (298) 39 51
CONST_STR (299) 44 50


No terminales con las reglas donde aparecen

$accept (45)
    en la izquierda: 0
programa (46)
    en la izquierda: 1, en la derecha: 0
declaracion (47)
    en la izquierda: 2, en la derecha: 1
linea_declaracion (48)
    en la izquierda: 3, en la derecha: 2
lista (49)
    en la izquierda: 4 5, en la derecha: 3 4 45
dec_tipo (50)
    en la izquierda: 6 7 8, en la derecha: 4 5
sentencias (51)
    en la izquierda: 9 10, en la derecha: 1 9 18 40 41
sent (52)
    en la izquierda: 11 12 13 14 15 16 17, en la derecha: 9 10
iteracion (53)
    en la izquierda: 18, en la derecha: 11
condiciones (54)
    en la izquierda: 19 20, en la derecha: 18 19 40 41
operador (55)
    en la izquierda: 21 22, en la derecha: 19
condicion (56)
    en la izquierda: 23 24 25 26 27 28, en la derecha: 19 20
expresion (57)
    en la izquierda: 29 30 31, en la derecha: 23 24 25 26 27 28 29
    30 37 45 46 47
termino (58)
    en la izquierda: 32 33 34, en la derecha: 29 30 31 32 33
factor (59)
    en la izquierda: 35 36 37, en la derecha: 32 33 34
tipo (60)
    en la izquierda: 38 39, en la derecha: 36
decision (61)
    en la izquierda: 40 41, en la derecha: 12
entrada_salida (62)
    en la izquierda: 42 43 44, en la derecha: 13
asignacion (63)
    en la izquierda: 45, en la derecha: 14
sent_div (64)
    en la izquierda: 46, en la derecha: 15
sent_mod (65)
    en la izquierda: 47, en la derecha: 16
DIV (66)
    en la izquierda: 48, en la derecha: 46
MOD (67)
    en la izquierda: 49, en la derecha: 47
cte_nombre (68)
    en la izquierda: 50 51 52, en la derecha: 17


estado 0

    0 $accept: . programa $end

    VAR  desplazar e ir al estado 1

    programa     ir al estado 2
    declaracion  ir al estado 3


estado 1

    2 declaracion: VAR . linea_declaracion ENDVAR

    CAR_CA  desplazar e ir al estado 4

    linea_declaracion  ir al estado 5


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 6


estado 3

    1 programa: declaracion . sentencias

    REPEAT  desplazar e ir al estado 7
    IF      desplazar e ir al estado 8
    ID      desplazar e ir al estado 9
    INT     desplazar e ir al estado 10
    FLOAT   desplazar e ir al estado 11
    STRING  desplazar e ir al estado 12
    READ    desplazar e ir al estado 13
    PRINT   desplazar e ir al estado 14
    CONST   desplazar e ir al estado 15

    lista           ir al estado 16
    dec_tipo        ir al estado 17
    sentencias      ir al estado 18
    sent            ir al estado 19
    iteracion       ir al estado 20
    decision        ir al estado 21
    entrada_salida  ir al estado 22
    asignacion      ir al estado 23
    sent_div        ir al estado 24
    sent_mod        ir al estado 25
    cte_nombre      ir al estado 26


estado 4

    3 linea_declaracion: CAR_CA . lista CAR_CC

    INT     desplazar e ir al estado 10
    FLOAT   desplazar e ir al estado 11
    STRING  desplazar e ir al estado 12

    lista     ir al estado 27
    dec_tipo  ir al estado 17


estado 5

    2 declaracion: VAR linea_declaracion . ENDVAR

    ENDVAR  desplazar e ir al estado 28


estado 6

    0 $accept: programa $end .

    $default  aceptar


estado 7

   18 iteracion: REPEAT . CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC

    CAR_PA  desplazar e ir al estado 29


estado 8

   40 decision: IF . CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC
   41         | IF . CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC ELSE CAR_LA sentencias CAR_LC

    CAR_PA  desplazar e ir al estado 30


estado 9

   46 sent_div: ID . OP_ASIG expresion DIV expresion
   47 sent_mod: ID . OP_ASIG expresion MOD expresion

    OP_ASIG  desplazar e ir al estado 31


estado 10

    6 dec_tipo: INT .

    $default  reduce usando la regla 6 (dec_tipo)


estado 11

    8 dec_tipo: FLOAT .

    $default  reduce usando la regla 8 (dec_tipo)


estado 12

    7 dec_tipo: STRING .

    $default  reduce usando la regla 7 (dec_tipo)


estado 13

   42 entrada_salida: READ . ID

    ID  desplazar e ir al estado 32


estado 14

   43 entrada_salida: PRINT . ID
   44               | PRINT . CONST_STR

    ID         desplazar e ir al estado 33
    CONST_STR  desplazar e ir al estado 34


estado 15

   50 cte_nombre: CONST . ID OP_IGUAL CONST_STR
   51           | CONST . ID OP_IGUAL CONST_REAL
   52           | CONST . ID OP_IGUAL CONST_INT

    ID  desplazar e ir al estado 35


estado 16

   45 asignacion: lista . expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 40
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 17

    4 lista: dec_tipo . CAR_COMA lista CAR_COMA ID
    5      | dec_tipo . CAR_CC OP_DOSP CAR_CA ID

    CAR_COMA  desplazar e ir al estado 44
    CAR_CC    desplazar e ir al estado 45


estado 18

    1 programa: declaracion sentencias .
    9 sentencias: sentencias . sent

    REPEAT  desplazar e ir al estado 7
    IF      desplazar e ir al estado 8
    ID      desplazar e ir al estado 9
    INT     desplazar e ir al estado 10
    FLOAT   desplazar e ir al estado 11
    STRING  desplazar e ir al estado 12
    READ    desplazar e ir al estado 13
    PRINT   desplazar e ir al estado 14
    CONST   desplazar e ir al estado 15

    $default  reduce usando la regla 1 (programa)

    lista           ir al estado 16
    dec_tipo        ir al estado 17
    sent            ir al estado 46
    iteracion       ir al estado 20
    decision        ir al estado 21
    entrada_salida  ir al estado 22
    asignacion      ir al estado 23
    sent_div        ir al estado 24
    sent_mod        ir al estado 25
    cte_nombre      ir al estado 26


estado 19

   10 sentencias: sent .

    $default  reduce usando la regla 10 (sentencias)


estado 20

   11 sent: iteracion .

    $default  reduce usando la regla 11 (sent)


estado 21

   12 sent: decision .

    $default  reduce usando la regla 12 (sent)


estado 22

   13 sent: entrada_salida .

    $default  reduce usando la regla 13 (sent)


estado 23

   14 sent: asignacion .

    $default  reduce usando la regla 14 (sent)


estado 24

   15 sent: sent_div .

    $default  reduce usando la regla 15 (sent)


estado 25

   16 sent: sent_mod .

    $default  reduce usando la regla 16 (sent)


estado 26

   17 sent: cte_nombre .

    $default  reduce usando la regla 17 (sent)


estado 27

    3 linea_declaracion: CAR_CA lista . CAR_CC

    CAR_CC  desplazar e ir al estado 47


estado 28

    2 declaracion: VAR linea_declaracion ENDVAR .

    $default  reduce usando la regla 2 (declaracion)


estado 29

   18 iteracion: REPEAT CAR_PA . condiciones CAR_PC CAR_LA sentencias CAR_LC

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    condiciones  ir al estado 48
    condicion    ir al estado 49
    expresion    ir al estado 50
    termino      ir al estado 41
    factor       ir al estado 42
    tipo         ir al estado 43


estado 30

   40 decision: IF CAR_PA . condiciones CAR_PC CAR_LA sentencias CAR_LC
   41         | IF CAR_PA . condiciones CAR_PC CAR_LA sentencias CAR_LC ELSE CAR_LA sentencias CAR_LC

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    condiciones  ir al estado 51
    condicion    ir al estado 49
    expresion    ir al estado 50
    termino      ir al estado 41
    factor       ir al estado 42
    tipo         ir al estado 43


estado 31

   46 sent_div: ID OP_ASIG . expresion DIV expresion
   47 sent_mod: ID OP_ASIG . expresion MOD expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 52
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 32

   42 entrada_salida: READ ID .

    $default  reduce usando la regla 42 (entrada_salida)


estado 33

   43 entrada_salida: PRINT ID .

    $default  reduce usando la regla 43 (entrada_salida)


estado 34

   44 entrada_salida: PRINT CONST_STR .

    $default  reduce usando la regla 44 (entrada_salida)


estado 35

   50 cte_nombre: CONST ID . OP_IGUAL CONST_STR
   51           | CONST ID . OP_IGUAL CONST_REAL
   52           | CONST ID . OP_IGUAL CONST_INT

    OP_IGUAL  desplazar e ir al estado 53


estado 36

   37 factor: CAR_PA . expresion CAR_PC

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 54
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 37

   35 factor: ID .

    $default  reduce usando la regla 35 (factor)


estado 38

   38 tipo: CONST_INT .

    $default  reduce usando la regla 38 (tipo)


estado 39

   39 tipo: CONST_REAL .

    $default  reduce usando la regla 39 (tipo)


estado 40

   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino
   45 asignacion: lista expresion .

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56

    $default  reduce usando la regla 45 (asignacion)


estado 41

   31 expresion: termino .
   32 termino: termino . OP_MUL factor
   33        | termino . OP_DIV factor

    OP_DIV  desplazar e ir al estado 57
    OP_MUL  desplazar e ir al estado 58

    OP_DIV    [reduce usando la regla 31 (expresion)]
    $default  reduce usando la regla 31 (expresion)


estado 42

   34 termino: factor .

    $default  reduce usando la regla 34 (termino)


estado 43

   36 factor: tipo .

    $default  reduce usando la regla 36 (factor)


estado 44

    4 lista: dec_tipo CAR_COMA . lista CAR_COMA ID

    INT     desplazar e ir al estado 10
    FLOAT   desplazar e ir al estado 11
    STRING  desplazar e ir al estado 12

    lista     ir al estado 59
    dec_tipo  ir al estado 17


estado 45

    5 lista: dec_tipo CAR_CC . OP_DOSP CAR_CA ID

    OP_DOSP  desplazar e ir al estado 60


estado 46

    9 sentencias: sentencias sent .

    $default  reduce usando la regla 9 (sentencias)


estado 47

    3 linea_declaracion: CAR_CA lista CAR_CC .

    $default  reduce usando la regla 3 (linea_declaracion)


estado 48

   18 iteracion: REPEAT CAR_PA condiciones . CAR_PC CAR_LA sentencias CAR_LC
   19 condiciones: condiciones . operador condicion

    CAR_PC  desplazar e ir al estado 61
    AND     desplazar e ir al estado 62
    OR      desplazar e ir al estado 63

    operador  ir al estado 64


estado 49

   20 condiciones: condicion .

    $default  reduce usando la regla 20 (condiciones)


estado 50

   23 condicion: expresion . CMP_MAYOR expresion
   24          | expresion . CMP_MAYORIGUAL expresion
   25          | expresion . CMP_MENOR expresion
   26          | expresion . CMP_MENORIGUAL expresion
   27          | expresion . CMP_IGUAL expresion
   28          | expresion . CMP_DISTINTO expresion
   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino

    OP_SUM          desplazar e ir al estado 55
    OP_RES          desplazar e ir al estado 56
    CMP_MAYOR       desplazar e ir al estado 65
    CMP_MENOR       desplazar e ir al estado 66
    CMP_MAYORIGUAL  desplazar e ir al estado 67
    CMP_MENORIGUAL  desplazar e ir al estado 68
    CMP_DISTINTO    desplazar e ir al estado 69
    CMP_IGUAL       desplazar e ir al estado 70


estado 51

   19 condiciones: condiciones . operador condicion
   40 decision: IF CAR_PA condiciones . CAR_PC CAR_LA sentencias CAR_LC
   41         | IF CAR_PA condiciones . CAR_PC CAR_LA sentencias CAR_LC ELSE CAR_LA sentencias CAR_LC

    CAR_PC  desplazar e ir al estado 71
    AND     desplazar e ir al estado 62
    OR      desplazar e ir al estado 63

    operador  ir al estado 64


estado 52

   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino
   46 sent_div: ID OP_ASIG expresion . DIV expresion
   47 sent_mod: ID OP_ASIG expresion . MOD expresion

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56
    OP_DIV  desplazar e ir al estado 72
    OP_MOD  desplazar e ir al estado 73

    DIV  ir al estado 74
    MOD  ir al estado 75


estado 53

   50 cte_nombre: CONST ID OP_IGUAL . CONST_STR
   51           | CONST ID OP_IGUAL . CONST_REAL
   52           | CONST ID OP_IGUAL . CONST_INT

    CONST_INT   desplazar e ir al estado 76
    CONST_REAL  desplazar e ir al estado 77
    CONST_STR   desplazar e ir al estado 78


estado 54

   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino
   37 factor: CAR_PA expresion . CAR_PC

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56
    CAR_PC  desplazar e ir al estado 79


estado 55

   30 expresion: expresion OP_SUM . termino

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    termino  ir al estado 80
    factor   ir al estado 42
    tipo     ir al estado 43


estado 56

   29 expresion: expresion OP_RES . termino

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    termino  ir al estado 81
    factor   ir al estado 42
    tipo     ir al estado 43


estado 57

   33 termino: termino OP_DIV . factor

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    factor  ir al estado 82
    tipo    ir al estado 43


estado 58

   32 termino: termino OP_MUL . factor

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    factor  ir al estado 83
    tipo    ir al estado 43


estado 59

    4 lista: dec_tipo CAR_COMA lista . CAR_COMA ID

    CAR_COMA  desplazar e ir al estado 84


estado 60

    5 lista: dec_tipo CAR_CC OP_DOSP . CAR_CA ID

    CAR_CA  desplazar e ir al estado 85


estado 61

   18 iteracion: REPEAT CAR_PA condiciones CAR_PC . CAR_LA sentencias CAR_LC

    CAR_LA  desplazar e ir al estado 86


estado 62

   21 operador: AND .

    $default  reduce usando la regla 21 (operador)


estado 63

   22 operador: OR .

    $default  reduce usando la regla 22 (operador)


estado 64

   19 condiciones: condiciones operador . condicion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    condicion  ir al estado 87
    expresion  ir al estado 50
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 65

   23 condicion: expresion CMP_MAYOR . expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 88
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 66

   25 condicion: expresion CMP_MENOR . expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 89
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 67

   24 condicion: expresion CMP_MAYORIGUAL . expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 90
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 68

   26 condicion: expresion CMP_MENORIGUAL . expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 91
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 69

   28 condicion: expresion CMP_DISTINTO . expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 92
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 70

   27 condicion: expresion CMP_IGUAL . expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 93
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 71

   40 decision: IF CAR_PA condiciones CAR_PC . CAR_LA sentencias CAR_LC
   41         | IF CAR_PA condiciones CAR_PC . CAR_LA sentencias CAR_LC ELSE CAR_LA sentencias CAR_LC

    CAR_LA  desplazar e ir al estado 94


estado 72

   48 DIV: OP_DIV .

    $default  reduce usando la regla 48 (DIV)


estado 73

   49 MOD: OP_MOD .

    $default  reduce usando la regla 49 (MOD)


estado 74

   46 sent_div: ID OP_ASIG expresion DIV . expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 95
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 75

   47 sent_mod: ID OP_ASIG expresion MOD . expresion

    CAR_PA      desplazar e ir al estado 36
    ID          desplazar e ir al estado 37
    CONST_INT   desplazar e ir al estado 38
    CONST_REAL  desplazar e ir al estado 39

    expresion  ir al estado 96
    termino    ir al estado 41
    factor     ir al estado 42
    tipo       ir al estado 43


estado 76

   52 cte_nombre: CONST ID OP_IGUAL CONST_INT .

    $default  reduce usando la regla 52 (cte_nombre)


estado 77

   51 cte_nombre: CONST ID OP_IGUAL CONST_REAL .

    $default  reduce usando la regla 51 (cte_nombre)


estado 78

   50 cte_nombre: CONST ID OP_IGUAL CONST_STR .

    $default  reduce usando la regla 50 (cte_nombre)


estado 79

   37 factor: CAR_PA expresion CAR_PC .

    $default  reduce usando la regla 37 (factor)


estado 80

   30 expresion: expresion OP_SUM termino .
   32 termino: termino . OP_MUL factor
   33        | termino . OP_DIV factor

    OP_DIV  desplazar e ir al estado 57
    OP_MUL  desplazar e ir al estado 58

    OP_DIV    [reduce usando la regla 30 (expresion)]
    $default  reduce usando la regla 30 (expresion)


estado 81

   29 expresion: expresion OP_RES termino .
   32 termino: termino . OP_MUL factor
   33        | termino . OP_DIV factor

    OP_DIV  desplazar e ir al estado 57
    OP_MUL  desplazar e ir al estado 58

    OP_DIV    [reduce usando la regla 29 (expresion)]
    $default  reduce usando la regla 29 (expresion)


estado 82

   33 termino: termino OP_DIV factor .

    $default  reduce usando la regla 33 (termino)


estado 83

   32 termino: termino OP_MUL factor .

    $default  reduce usando la regla 32 (termino)


estado 84

    4 lista: dec_tipo CAR_COMA lista CAR_COMA . ID

    ID  desplazar e ir al estado 97


estado 85

    5 lista: dec_tipo CAR_CC OP_DOSP CAR_CA . ID

    ID  desplazar e ir al estado 98


estado 86

   18 iteracion: REPEAT CAR_PA condiciones CAR_PC CAR_LA . sentencias CAR_LC

    REPEAT  desplazar e ir al estado 7
    IF      desplazar e ir al estado 8
    ID      desplazar e ir al estado 9
    INT     desplazar e ir al estado 10
    FLOAT   desplazar e ir al estado 11
    STRING  desplazar e ir al estado 12
    READ    desplazar e ir al estado 13
    PRINT   desplazar e ir al estado 14
    CONST   desplazar e ir al estado 15

    lista           ir al estado 16
    dec_tipo        ir al estado 17
    sentencias      ir al estado 99
    sent            ir al estado 19
    iteracion       ir al estado 20
    decision        ir al estado 21
    entrada_salida  ir al estado 22
    asignacion      ir al estado 23
    sent_div        ir al estado 24
    sent_mod        ir al estado 25
    cte_nombre      ir al estado 26


estado 87

   19 condiciones: condiciones operador condicion .

    $default  reduce usando la regla 19 (condiciones)


estado 88

   23 condicion: expresion CMP_MAYOR expresion .
   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56

    $default  reduce usando la regla 23 (condicion)


estado 89

   25 condicion: expresion CMP_MENOR expresion .
   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56

    $default  reduce usando la regla 25 (condicion)


estado 90

   24 condicion: expresion CMP_MAYORIGUAL expresion .
   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56

    $default  reduce usando la regla 24 (condicion)


estado 91

   26 condicion: expresion CMP_MENORIGUAL expresion .
   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56

    $default  reduce usando la regla 26 (condicion)


estado 92

   28 condicion: expresion CMP_DISTINTO expresion .
   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56

    $default  reduce usando la regla 28 (condicion)


estado 93

   27 condicion: expresion CMP_IGUAL expresion .
   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56

    $default  reduce usando la regla 27 (condicion)


estado 94

   40 decision: IF CAR_PA condiciones CAR_PC CAR_LA . sentencias CAR_LC
   41         | IF CAR_PA condiciones CAR_PC CAR_LA . sentencias CAR_LC ELSE CAR_LA sentencias CAR_LC

    REPEAT  desplazar e ir al estado 7
    IF      desplazar e ir al estado 8
    ID      desplazar e ir al estado 9
    INT     desplazar e ir al estado 10
    FLOAT   desplazar e ir al estado 11
    STRING  desplazar e ir al estado 12
    READ    desplazar e ir al estado 13
    PRINT   desplazar e ir al estado 14
    CONST   desplazar e ir al estado 15

    lista           ir al estado 16
    dec_tipo        ir al estado 17
    sentencias      ir al estado 100
    sent            ir al estado 19
    iteracion       ir al estado 20
    decision        ir al estado 21
    entrada_salida  ir al estado 22
    asignacion      ir al estado 23
    sent_div        ir al estado 24
    sent_mod        ir al estado 25
    cte_nombre      ir al estado 26


estado 95

   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino
   46 sent_div: ID OP_ASIG expresion DIV expresion .

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56

    $default  reduce usando la regla 46 (sent_div)


estado 96

   29 expresion: expresion . OP_RES termino
   30          | expresion . OP_SUM termino
   47 sent_mod: ID OP_ASIG expresion MOD expresion .

    OP_SUM  desplazar e ir al estado 55
    OP_RES  desplazar e ir al estado 56

    $default  reduce usando la regla 47 (sent_mod)


estado 97

    4 lista: dec_tipo CAR_COMA lista CAR_COMA ID .

    $default  reduce usando la regla 4 (lista)


estado 98

    5 lista: dec_tipo CAR_CC OP_DOSP CAR_CA ID .

    $default  reduce usando la regla 5 (lista)


estado 99

    9 sentencias: sentencias . sent
   18 iteracion: REPEAT CAR_PA condiciones CAR_PC CAR_LA sentencias . CAR_LC

    REPEAT  desplazar e ir al estado 7
    IF      desplazar e ir al estado 8
    CAR_LC  desplazar e ir al estado 101
    ID      desplazar e ir al estado 9
    INT     desplazar e ir al estado 10
    FLOAT   desplazar e ir al estado 11
    STRING  desplazar e ir al estado 12
    READ    desplazar e ir al estado 13
    PRINT   desplazar e ir al estado 14
    CONST   desplazar e ir al estado 15

    lista           ir al estado 16
    dec_tipo        ir al estado 17
    sent            ir al estado 46
    iteracion       ir al estado 20
    decision        ir al estado 21
    entrada_salida  ir al estado 22
    asignacion      ir al estado 23
    sent_div        ir al estado 24
    sent_mod        ir al estado 25
    cte_nombre      ir al estado 26


estado 100

    9 sentencias: sentencias . sent
   40 decision: IF CAR_PA condiciones CAR_PC CAR_LA sentencias . CAR_LC
   41         | IF CAR_PA condiciones CAR_PC CAR_LA sentencias . CAR_LC ELSE CAR_LA sentencias CAR_LC

    REPEAT  desplazar e ir al estado 7
    IF      desplazar e ir al estado 8
    CAR_LC  desplazar e ir al estado 102
    ID      desplazar e ir al estado 9
    INT     desplazar e ir al estado 10
    FLOAT   desplazar e ir al estado 11
    STRING  desplazar e ir al estado 12
    READ    desplazar e ir al estado 13
    PRINT   desplazar e ir al estado 14
    CONST   desplazar e ir al estado 15

    lista           ir al estado 16
    dec_tipo        ir al estado 17
    sent            ir al estado 46
    iteracion       ir al estado 20
    decision        ir al estado 21
    entrada_salida  ir al estado 22
    asignacion      ir al estado 23
    sent_div        ir al estado 24
    sent_mod        ir al estado 25
    cte_nombre      ir al estado 26


estado 101

   18 iteracion: REPEAT CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC .

    $default  reduce usando la regla 18 (iteracion)


estado 102

   40 decision: IF CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC .
   41         | IF CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC . ELSE CAR_LA sentencias CAR_LC

    ELSE  desplazar e ir al estado 103

    $default  reduce usando la regla 40 (decision)


estado 103

   41 decision: IF CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC ELSE . CAR_LA sentencias CAR_LC

    CAR_LA  desplazar e ir al estado 104


estado 104

   41 decision: IF CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC ELSE CAR_LA . sentencias CAR_LC

    REPEAT  desplazar e ir al estado 7
    IF      desplazar e ir al estado 8
    ID      desplazar e ir al estado 9
    INT     desplazar e ir al estado 10
    FLOAT   desplazar e ir al estado 11
    STRING  desplazar e ir al estado 12
    READ    desplazar e ir al estado 13
    PRINT   desplazar e ir al estado 14
    CONST   desplazar e ir al estado 15

    lista           ir al estado 16
    dec_tipo        ir al estado 17
    sentencias      ir al estado 105
    sent            ir al estado 19
    iteracion       ir al estado 20
    decision        ir al estado 21
    entrada_salida  ir al estado 22
    asignacion      ir al estado 23
    sent_div        ir al estado 24
    sent_mod        ir al estado 25
    cte_nombre      ir al estado 26


estado 105

    9 sentencias: sentencias . sent
   41 decision: IF CAR_PA condiciones CAR_PC CAR_LA sentencias CAR_LC ELSE CAR_LA sentencias . CAR_LC
